[package]
edition = "2021"
name = "bevy_veilid"
version = "0.1.2"
license = "Apache-2.0"
description = "Build turn-based p2p games with Veilid "
keywords = ["veilid", "bevy", "p2p", "turnbased"]
repository = "https://github.com/stillonearth/bevy_veilid"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12"
serde = { version = "1.0.188", features= ["derive"] }
anyhow = "1.0.72"
copypasta = "0.10"
# veilid_duplex = "0.1.5"
veilid_duplex={path="../veilid_duplex"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy-tokio-tasks = {git="https://github.com/foxzool/bevy-tokio-tasks", rev="b12e1d0"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy-wasm-tasks = {git="https://github.com/stillonearth/bevy-wasm-tasks.git", rev="3f77809"}
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3", features = ["Clipboard"] }
futures = "0.3.29"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[dev-dependencies]
belly = {git="https://github.com/jkb0o/belly.git", rev="800fbc0"}