[package]
edition = "2021"
name = "bevy_veilid"
version = "0.3.0"
license = "Apache-2.0"
description = "Build turn-based p2p games with Veilid "
keywords = ["veilid", "bevy", "p2p", "turnbased"]
repository = "https://github.com/stillonearth/bevy_veilid"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13"
serde = { version = "1.0.188", features= ["derive"] }
anyhow = "1.0.72"
copypasta = "0.10"
veilid_duplex = "0.2"
bevy_app = "0.13.0"
bevy_ecs = "0.13.0"
tokio = { version = "1", features = ["rt", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy-wasm-tasks = "0.13.0"
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3", features = ["Clipboard"] }
futures = "0.3.29"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dev-dependencies]
bevy = { version = "0.13.0", default-features = false, features = ["bevy_core_pipeline", "bevy_asset", "bevy_render", "bevy_winit", "x11"] }
tokio = { version = "1", features = ["time"] }

belly = {git="https://github.com/jkb0o/belly.git", rev="7a1acb3"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
